Development
    Have tracker expand when wide text is displayed
    Corrected crasher in recent menu, however this now requires GIO to work correctly
    Fixed meter and details display when combined with playlist
    Hook I key to show display_name when in fullscreen mode
    Prevent invalid memory accesses
    Move map/unmap code back to the main thread
    Add thumb position option to widget
    Use more bars in meter, fix some drawing issues in the meter
    Fix some problems with the media tracker drawing code
    Change audio meter calcs
    Addition of the new Media Tracker to replace the old progress bar
    Addition of the Audio Meter Widget
0.9.5
    For vdpau, fall back to vdpau, xv or x11 if we can't find the right codec
    For xvmc, fall back to xv or x11 if we can't find the right codec
    If we are given an mms:// url and it doesn't work try as mmshttp:// url
    Try http urls are mmshttp urls and fall back if nothing opens to http urls
	Patch to fix a site, but code still commented out.
	Updated Korean, Japanese, Serbian and Turkish translations
    Updated Polish translation
    Have < go to the previous item on the playlist and > to the next
    Removed Roberto's translation due to personality conflicts, reverting
    New Spanish translation from Roberto DMD
    Added Polish translation to the .desktop file
    Speed up channel loading
    Updated French translation from Starcrasher
    Change hotkey for Angle from A to Ctrl-A, as conflicts with Aspect
    Optimize the menu slide away calls
    Updated Spanish translation by Surfaz Gemon Meme
    Add number of audio channels and video fps to property plugin
    Fix crasher if we can't open cover art file for writing
    Add bitrate to property page in nautilus
    Initial commit of nautilus property plugin 
        (enabled by default, use --enable-nautilus=no to disable)
    In all cases where mplayer is launched, use specified location if available, otherwise