@@ -38,6 +38,7 @@ G_BEGIN_DECLS
 #define GMTK_MEDIA_TRACKER_GET_CLASS	(G_TYPE_INSTANCE_GET_CLASS ((obj), GMTK_TYPE_MEDIA_TRACKER, GmtkMediaTrackerClass))
 
 typedef enum {
+	THUMB_HIDDEN,
     THUMB_ON_BOTTOM,
     THUMB_ON_TOP,
     THUMB_ON_TOP_AND_BOTTOM
