@@ -1,4 +1,5 @@
 Development
+    Cleanup display when media is not seekable
     Have tracker expand when wide text is displayed
     Corrected crasher in recent menu, however this now requires GIO to work correctly
     Fixed meter and details display when combined with playlist
